<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MultiplayerActivity"
    android:id="@+id/mmLayout"
    android:layout_margin="50dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer_mode"
        android:textSize="30sp"
        android:gravity="center_horizontal"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_btn"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="50dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnServer"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_btn"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="50dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnClient"/>
</LinearLayout>