<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.LevelInfoFragment">

    <TextView
        android:layout_margin="8dp"
        android:padding="20dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/level"
        android:id="@+id/lblLevel"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/timerPB"
            android:paddingVertical="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:background="@drawable/circle_shape"
            android:progress="0"
            android:max="60"/>

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:layout_centerInParent="true"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_margin="8dp"
        android:padding="20dp"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/answers"
        android:id="@+id/correctAnswers"/>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50sp"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:max="5"
        android:progress="1"
        android:id="@+id/correctAnswersPB"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/levelProgress"
        android:id="@+id/nextLevelProgress"/>

</LinearLayout>